FIX: fix http-server path in package.json
- `npm start` now starts http-server in the correct path

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     },
     "scripts": {
         "postinstall": "bower install",
-        "start": "http-server -a localhost -p 8000",
-        "test": "karma start test/karma.conf.js"
+        "start": "http-server app -a localhost -p 8000"
     }
 }
