CLEANUP,IMPROVE,STYLE: add several improvements
- add gulp
- cleanup and minify scripts

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-resource": "~1.2.16",
     "angular-sanitize": "~1.2.16",
     "font-awesome": "~4.1.0",
-    "modernizr": "~2.8.1"
+    "modernizr": "~2.8.1",
+    "jquery-details": "~0.1.0"
   }
 }
