--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
     "repository": "https://github.com/sanusart/html-now",
     "license": "MIT",
     "devDependencies": {
-        "karma": "~0.10",
-        "protractor": "~0.20.1",
+        "bower": "^1.3.1",
+        "gulp-concat-sourcemap": "^1.3.0",
+        "gulp-connect": "^2.0.5",
+        "gulp-strip-debug": "^0.3.0",
         "http-server": "^0.6.1",
-        "bower": "^1.3.1"
+        "karma": "~0.10",
+        "protractor": "~0.20.1"
     },
     "scripts": {
         "postinstall": "bower install",
         "start": "http-server app -a localhost -p 8000"
+    },
+    "dependencies": {
+        "gulp": "^3.6.2"
     }
 }
