FEATURES, CLEAN-UP, STYLE1: several improvements and features
- fix UI
- add more libraries
- add `bundles` - creates template with predefined scripts
- get rid of `<details>` - browser support is very poor, use dl,dt,dd and ng-show instead
- update README.md
- clean-up

--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,7 @@
     "normalize.css": "~3.0.1",
     "angular": "~1.2.16",
     "angular-route": "~1.2.16",
-    "angular-resource": "~1.2.16",
-    "angular-sanitize": "~1.2.16",
     "font-awesome": "~4.1.0",
-    "modernizr": "~2.8.1",
-    "jquery-details": "~0.1.0"
+    "modernizr": "~2.8.1"
   }
 }
