--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
+    "gulp": "^3.6.2",
     "gulp-concat-sourcemap": "^1.3.0",
     "gulp-connect": "^2.0.5",
     "gulp-strip-debug": "^0.3.0",
@@ -19,8 +20,5 @@
     "postinstall": "bower install",
     "test": "karma start --single-run",
     "start": "http-server app -a localhost -p 8000"
-  },
-  "dependencies": {
-    "gulp": "^3.6.2"
   }
 }
