--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "postinstall": "bower install",
     "test": "karma start --single-run",
     "start": "http-server app -a localhost -p 8000",
-    "site-deploy": "gulp prod && git push origin `git subtree split --prefix app master`:gh-pages --force && gulp dev"
+    "site-deploy": "gulp prod && git commit -am 'deploy' &&  git push origin `git subtree split --prefix app master`:gh-pages --force && git reset --soft HEAD~1 && gulp dev && git reset --hard"
   }
 }
