--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "bower": "^1.3.1",
     "gulp": "^3.6.2",
     "gulp-concat-sourcemap": "^1.3.0",
-    "gulp-connect": "^2.0.5",
-    "gulp-strip-debug": "^0.3.0",
-    "http-server": "^0.6.1",
-    "karma": "~0.10",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs": "^1.9.15",
-    "protractor": "~0.20.1"
+    "gulp-connect": "^4.1.0",
+    "gulp-strip-debug": "^1.1.0",
+    "http-server": "^0.9.0",
+    "karma": "~1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "phantomjs": "^2.1.7",
+    "protractor": "~3.3.0"
   },
   "scripts": {
     "postinstall": "bower install",
